// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and information 1`] = `
Object {
  "data": Object {
    "apiID": "test-collection-type",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "pluginOptions": Object {
            "i18n": Object {
              "localized": true,
            },
          },
          "type": "string",
        },
      },
      "collectionName": "test_collection_types",
      "description": "",
      "displayName": "Test Collection Type",
      "draftAndPublish": false,
      "kind": "collectionType",
      "pluginOptions": Object {
        "i18n": Object {
          "localized": true,
        },
      },
      "pluralName": "test-collection-types",
      "restrictRelationsTo": null,
      "singularName": "test-collection-type",
      "visible": true,
    },
    "uid": "api::test-collection-type.test-collection-type",
  },
}
`;

exports[`Content Type Builder - Content types Collection Types Get collection type returns full schema and informations with draftAndPublish 1`] = `
Object {
  "data": Object {
    "apiID": "ct-with-dp",
    "schema": Object {
      "attributes": Object {
        "title": Object {
          "type": "string",
        },
      },
      "collectionName": "ct_with_dps",
      "description": "",
      "displayName": "CT with DP",
      "draftAndPublish": true,
      "kind": "collectionType",
      "pluralName": "ct-with-dps",
      "restrictRelationsTo": null,
      "singularName": "ct-with-dp",
      "visible": true,
    },
    "uid": "api::ct-with-dp.ct-with-dp",
  },
}
`;
